新增: 前端app页面基础框架搭建; 最开始的loading界面功能实现

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,8 +1,8 @@
-html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
-}
+/*html {*/
+/*    background-color: rgba(27, 38, 54, 1);*/
+/*    text-align: center;*/
+/*    color: white;*/
+/*}*/
 
 body {
     margin: 0;
